--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -64,3 +64,23 @@
   background-size: cover;
   background-position: center;
 }
+
+.background--white {
+  background-color: transparent;
+}
+
+.background--white .background__img {
+  filter: unset;
+  width: 100%;
+  height: 50%;
+  margin-left: -40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+
+.background--white .background__text {
+  margin-top: var(--spacing-4);
+  text-transform: uppercase;
+  color: var(--text-x-light-color);
+}
