--- a/src/style/base/avatar.css
+++ b/src/style/base/avatar.css
@@ -51,9 +51,11 @@
 
 .avatar img {
   width: 100%;
+  height: 100%;
   border-radius: 100%;
   transition: all 0.3s ease;
   flex-shrink: 0;
+  object-fit: cover;
 }
 
 /* multible imgs avatar*/
