--- a/src/style/base/input.css
+++ b/src/style/base/input.css
@@ -61,17 +61,17 @@ textarea::placeholder {
 }
 
 .input-icon__icon--clear {
-  display: none;
+  /* display: none; */
   margin-left: var(--spacing-2);
 }
 
-.input-icon--search
+/* .input-icon--search
   .input-icon__input:focus
   ~ .input-icon__icon--right
   .input-icon__icon--clear {
   display: inline-block;
   margin-left: var(--spacing-2);
-}
+} */
 
 textarea {
   line-height: 2rem;
