--- a/src/style/base/avatar.css
+++ b/src/style/base/avatar.css
@@ -10,7 +10,7 @@
 .avatar--big {
   width: var(--avatar-big);
   height: var(--avatar-big);
-  padding: var(--spacing-1);
+  padding: 0;
   border-radius: 100%;
 }
 
