update logic flow in features contacts manage

--- a/src/style/base/card.css
+++ b/src/style/base/card.css
@@ -22,6 +22,10 @@
   align-items: center;
 }
 
+.userCard--disabled {
+  opacity: 0.5;
+}
+
 .chatCard:hover:not(.chatCard--active) {
   opacity: 0.6;
 }
