update paginate util: add chatroom search paginate, update chatrooms list feature: add search and load paginate, update loading setState: delete unnecessry setState loading

--- a/src/style/base/text.css
+++ b/src/style/base/text.css
@@ -38,3 +38,13 @@
 .text--center {
   text-align: center;
 }
+
+.no-data {
+  color: var(--text-x-light-color);
+  font-style: italic;
+}
+
+.no-data--dark {
+  color: var(--background-color);
+  font-style: italic;
+}
