--- a/src/style/base/button.css
+++ b/src/style/base/button.css
@@ -47,3 +47,11 @@
   border: none;
   color: var(--white-color);
 }
+
+.btn--disabled {
+  cursor: default;
+}
+
+.btn--disabled:hover {
+  opacity: 1;
+}
