--- a/src/style/index.css
+++ b/src/style/index.css
@@ -49,6 +49,7 @@
   --font-weight-medium: 500;
   --font-weight-regular: 400;
   --font-weight-light: 300;
+  --font-weight-x-light: 100;
 
   --spacing-1: 4px;
   --spacing-2: 8px;
