--- a/src/style/chat.css
+++ b/src/style/chat.css
@@ -81,11 +81,13 @@
 .chat-input__input {
   flex-grow: 1;
   display: flex;
+  flex-direction: column;
+  margin-left: var(--spacing-2);
+  overflow: auto;
 }
 
 .chat-input__input textarea {
   flex-grow: 1;
-  margin-left: var(--spacing-2);
   border: none;
 }
 
@@ -252,4 +254,85 @@
 
 .messageCard--end .avatar.loading {
   background-color: vAr(--primary-light-color);
+}
+
+/* chat input images  */
+.chat-input__images-wrapper {
+  flex-grow: 1;
+  display: flex;
+  overflow-x: auto;
+  background-color: var(--white-color);
+  margin-bottom: -2px;
+  z-index: 1;
+}
+
+.chat-input__image {
+  width: var(--input-image);
+  height: var(--input-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: var(--border-radius);
+  position: relative;
+  flex-shrink: 0;
+  margin-top: 8px;
+}
+
+.chat-input__image video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background-color: var(--text-x-light-color);
+}
+
+.chat-input__image ~ .chat-input__image {
+  margin-left: var(--spacing-3);
+}
+
+.chat-input__image-delete * {
+  display: block;
+  width: var(--font-size-5) !important;
+  height: var(--font-size-5);
+  line-height: var(--font-size-5);
+  color: var(--text-light-color);
+}
+
+.chat-input__image-delete {
+  display: inline-block;
+  padding: 3px;
+  line-height: var(--font-size-5);
+  transform: translate(30%, -30%);
+  border-radius: 100%;
+  background-color: var(--background-color);
+  border: 0.5px solid var(--border-color);
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+.chat-input__image-delete:hover {
+  opacity: 0.7;
+}
+
+.chat-input__images-wrapper ::-webkit-scrollbar {
+  height: 4px;
+}
+
+.chat-input__image--add {
+  background-color: var(--text-2x-light-color);
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.chat-input__image--add:hover {
+  opacity: 0.4;
+}
+
+.chat-input__image--add * {
+  color: var(--text-bold-color);
+  display: block;
+  width: 2rem !important;
+  height: 2rem;
 }
